# ezui

./: Cargo.toml  README.md
examples/: hello.rs
resource/shader/: fragment_100  fragment_140  vertex_100  vertex_140
src/: drawable.rs  lib.rs  mouse.rs  resource.rs  standard.rs  widget.rs
src/standard/: button.rs  mod.rs  text.rs  textbox.rs  texture.rs  util.rs
src/system/: image.rs  mod.rs  system.rs
