[package]
name = "ezui"
version = "0.0.2"
authors = ["Kazzix <kazzix14@gmail.com>"]
edition = "2018"
repository = "https://github.com/kazzix14/ezui.git"
keywords = ["gui", "vst"]
license-file = "LICENSE"
readme = "README.md"
description = "An eazy-to-use small GUI library. main purpose of this crate is to help you to make GUI for VST audio plugins."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.9.0"
glium = "0.16.0"
glium_text_rusttype = "0.0.4"
winit = "0.5.11"
image = "0.22.1"
nalgebra = "0.18.1"

[dev-dependencies]

[patch.crates-io]
winit = { git = "https://github.com/Boscop/winit-vst" }